[package]
name = "gcp_access_token"
version = "0.1.1"
edition = "2021"

[dependencies]
openssl = "0.10.30"
reqwest = {version="0.11.8",features = ["multipart","json"]}
json = "0.12.4"
tokio = { version = "1.15.0", features = ["full"] }
base64 = "0.13.0"
data-encoding = {version="2.3.2"}
urlencoding = "2.1.0"
